# abm

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/airflow_breeze_manager/: cli.py  cli_helpers.py  constants.py  models.py  utils.py
tests/: conftest.py  test_adopt.py  test_adopt_disown.py  test_cli_basic.py  test_models.py  test_utils.py
